--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,11 @@
         app:srcCompat="@drawable/egg2" />
 
     <ImageButton
-        android:id="@+id/playStopButton"
+        android:id="@+id/playButton"
         android:layout_width="55dp"
         android:layout_height="60dp"
-        android:contentDescription="@string/play_stop_button"
+        android:contentDescription="@string/play_button"
+        android:onClick="playButtonPressed"
         android:tint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +36,21 @@
         app:layout_constraintTop_toBottomOf="@+id/eggimageView"
         app:layout_constraintVertical_bias="0.406"
         app:srcCompat="@drawable/ic_play_play_48dp" />
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/stopButton"-->
+<!--        android:layout_width="55dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:alpha="0"-->
+<!--        android:contentDescription="@string/stop_button"-->
+<!--        android:onClick="stopButtonPressed"-->
+<!--        android:tint="@color/colorPrimary"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/eggimageView"-->
+<!--        app:layout_constraintVertical_bias="0.406"-->
+<!--        app:srcCompat="@drawable/ic_stop_white_48dp" />-->
 
     <SeekBar
         android:id="@+id/timerseekBar"
@@ -52,14 +68,44 @@
         app:layout_constraintVertical_bias="0.491" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/minutestextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/_00_00"
+        android:text="@string/min00"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/eggimageView"
         app:layout_constraintEnd_toEndOf="@+id/eggimageView"
+        app:layout_constraintHorizontal_bias="0.325"
         app:layout_constraintStart_toStartOf="@+id/eggimageView"
-        app:layout_constraintTop_toTopOf="@+id/eggimageView" />
+        app:layout_constraintTop_toTopOf="@+id/eggimageView"
+        app:layout_constraintVertical_bias="0.541" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/colan"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/eggimageView"
+        app:layout_constraintEnd_toEndOf="@+id/eggimageView"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/eggimageView"
+        app:layout_constraintTop_toTopOf="@+id/eggimageView"
+        app:layout_constraintVertical_bias="0.541" />
+
+    <TextView
+        android:id="@+id/secondstextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sec00"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/eggimageView"
+        app:layout_constraintEnd_toEndOf="@+id/eggimageView"
+        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintStart_toStartOf="@+id/eggimageView"
+        app:layout_constraintTop_toTopOf="@+id/eggimageView"
+        app:layout_constraintVertical_bias="0.541" />
 </androidx.constraintlayout.widget.ConstraintLayout>
